# opencmiss.merger

./: .gitignore  README.rst  pyproject.toml  setup.py
.github/workflows/: deploy.yaml
docs/: conf.py  index.rst
tests/: shared.py  test_merge.py
tests/resources/: colon_manometry_small.exf  cube_with_markers.exf  datapoints_I.exf  datapoints_II.exf
